--- a/src/main/resources/static/mem.html
+++ b/src/main/resources/static/mem.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <title>服务器信息</title>
-    <script src="./echarts-all.js"></script>
-    <script src="jquery.min.js"></script>
+    <script src="resources/echarts-all.js"></script>
+    <script src="resources/jquery.min.js"></script>
 </head>
 <body>
 <div id="mem" style="height:800px;"></div>
