add record and update sql

--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -58,7 +58,7 @@
     })
 
     function loadJson() {
-        $.getJSON("./getAll?maxid=" + maxid + "&ip=" + ip, function (data) {
+        $.getJSON("./logs/getAll?maxid=" + maxid + "&ip=" + ip, function (data) {
             let result = "";
             for (let i = 0; i < data.length; i++) {
                 result += "<tr><td>" + data[i].id + "</td>";
