update svg and index.html

--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -4,16 +4,30 @@
     <meta charset="UTF-8">
     <title>DNS服务器</title>
     <link rel="stylesheet" href="resources/bootstrap.min.css">
+    <link rel="stylesheet" href="https://cdn.staticfile.org/twitter-bootstrap/3.3.7/css/bootstrap.min.css">
 </head>
+<style type="text/css">
+    h1{font-size: 39px;
+    color: black}
+</style>
 <body>
 <div class="col-sm-4">
-    1
+    <a class="btn  btn-lg" href="setting.html">
+        <img height="200" src="resources/svg/setting.svg" style="margin: 0 auto;background-color:#010101">
+        <h1>DNS记录管理</h1></a>
+</div><div calss="divider"></div>
+
+<div class="col-sm-4">
+    <a class="btn  btn-lg" href="monitor.html">
+        <img height="200" src="resources/svg/monitor.svg">
+        <h1>DNS监控信息</h1>
+    </a>
 </div>
 <div class="col-sm-4">
-2
-</div>
-<div class="col-sm-4">
-3
+    <a class="btn  btn-lg" href="log.html">
+        <img height="200" src="resources/svg/log.svg">
+        <h1>DNS日志查看</h1>
+    </a>
 </div>
 </body>
 </html>
