--- a/src/main/resources/static/log.html
+++ b/src/main/resources/static/log.html
@@ -30,7 +30,7 @@
     <tbody id="tbody">
     </tbody>
 </table>
-<a href="./mem.html">
+<a href="monitor.html">
     <input class="btn btn-default " style="background: transparent;color:blue;position: fixed;bottom: 5rem;left: 1%;"
            type="button"
            value="服务器内存">
