--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -13,7 +13,7 @@
 <body>
 <div class="col-sm-4">
     <a class="btn  btn-lg" href="setting.html">
-        <img height="200" src="resources/svg/setting.svg" style="margin: 0 auto;background-color:#010101">
+        <img height="200" src="resources/svg/setting.svg">
         <h1>DNS记录管理</h1></a>
 </div><div calss="divider"></div>
 
